--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -34,8 +34,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            vectorized/kminion
-            redpandadata/kminion
+            glongzh/kminion
           # generate Docker tags based on the following events/attributes
           # Semver type is only active on 'push tag' events, hence no enable condition required
           tags: |
